alterado nome da img

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </tr>
     </table>
 <nav id="menu">
-    <a href="https://www.facebook.com/profile.php?id=100008236691589" target="_blank"><img src="imagem/faceB.png"></a>
+    <a href="https://www.facebook.com/profile.php?id=100008236691589" target="_blank"><img src="imagem/faceb.png"></a>
     <a href="https://github.com/Leodominoni" target="_blank"><img src="imagem/git.png"></a>
     <a href="https://www.instagram.com/gringostorenerd/" target="_blank"><img src="imagem/insta.png" target="_blank"></a>
     <a href="https://www.linkedin.com/in/leonordominoni/" target="_blank"><img src="imagem/link.png"></a>
